[package]
name = "asserts-rs"
version = "0.1.0"
edition = "2021"
description = "Asserts utilliy macros for Rust"
license = "MPL-2.0"
authors = ["CGQAQ <m.jason.liu@outlook.com>"]
homepage = "https://github.com/CGQAQ/asserts-rs"
repository = "https://github.com/CGQAQ/asserts-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
